--- a/index.html
+++ b/index.html
@@ -6,10 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- style file link -->
+    <link rel="stylesheet" href="styles/style.css">
+    <!-- font awesome kit link -->
+    <script src="https://kit.fontawesome.com/8295ab712f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- Header -->
+    <header>
+        <section class="banner">
+            <div class="h1-button">
+                <h1>Conmebol Copa America 2021</h1>
+                <a href="">Watch Live <i class="fas fa-arrow-right"></i> </a>
+            </div>
+            <div>
+                <img src="images/banner.png" alt="">
+            </div>
+        </section>
 
+    </header>
 </body>
 
 </html>
