--- a/index.html
+++ b/index.html
@@ -154,9 +154,18 @@
         </section>
     </main>
     <footer>
-        <div>
-            <img src="images/Logo.png" alt="">
-        </div>
+        <section class="footer-part">
+            <div class="footer-img">
+                <img src="images/Logo.png" alt="">
+            </div>
+            <div class="icons">
+                <a href=""><i class="fab fa-instagram-square icon"></i></a>
+                <a href=""><i class="fab fa-dribbble icon"></i></a>
+                <a href=""><i class="fab fa-twitter icon"></i></a>
+                <a href=""><i class="fab fa-youtube icon"></i></a>
+            </div>
+            <p>Copyright &copy 2022 Football</p>
+        </section>
     </footer>
 </body>
 
