1 extra part added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Football Club </title>
     <!-- style file link -->
     <link rel="stylesheet" href="styles/style.css">
     <!-- font awesome kit link -->
@@ -18,7 +18,7 @@
         <section class="banner">
             <div class="h1-button">
                 <h1>Conmebol Copa America 2021</h1>
-                <a href="">Watch Live <i class="fas fa-arrow-right"></i> </a>
+                <a href="" class="more-button">Watch Live <i class="fas fa-arrow-right"></i> </a>
             </div>
             <div>
                 <img src="images/banner.png" alt="">
@@ -153,10 +153,45 @@
             </div>
         </section>
     </main>
+    <!-- Latest Video -->
+    <section class="container">
+        <div class="videos-header">
+            <div>
+                <h2>Latest Videos</h2>
+            </div>
+            <div>
+                <a href="" class="more-button">More videos <i class="fas fa-arrow-right"></i> </a>
+            </div>
+
+        </div>
+        <div class="videos">
+            <iframe width="650" height="450" src="https://www.youtube.com/embed/46hMBNy1Pzo"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <div class="last-two-videos">
+                <div>
+                    <iframe width="450" height="200" src="https://www.youtube.com/embed/ngt9OM4gzkY"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+
+                <div>
+                    <iframe width="450" height="200" src="https://www.youtube.com/embed/Jw4rbsSevKs"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+
+
+            </div>
+        </div>
+    </section>
     <footer>
         <section class="footer-part">
             <div class="footer-img">
-                <img src="images/Logo.png" alt="">
+                <img src="images/Logo.png" alt="logo">
             </div>
             <div class="icons">
                 <a href=""><i class="fab fa-instagram-square icon"></i></a>
