--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
                 <h2>Latest Videos</h2>
             </div>
             <div>
-                <a href="" class="more-button">More videos <i class="fas fa-arrow-right"></i> </a>
+                <a href="https://www.premierleague.com/clubs" class="more-button" target="_blank">More videos <i
+                        class="fas fa-arrow-right"></i> </a>
             </div>
 
         </div>
