--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="" class="more-button">Watch Live <i class="fas fa-arrow-right"></i> </a>
             </div>
             <div>
-                <img src="images/banner.png" alt="">
+                <img src="images/banner.png" alt="Banner-A player kick the football">
             </div>
         </section>
     </header>
@@ -166,7 +166,7 @@
 
         </div>
         <div class="videos">
-            <iframe width="650" height="450" src="https://www.youtube.com/embed/46hMBNy1Pzo"
+            <iframe id="big-video" width="650" height="450" src="https://www.youtube.com/embed/46hMBNy1Pzo"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
