--- a/index.html
+++ b/index.html
@@ -166,26 +166,21 @@
 
         </div>
         <div class="videos">
-            <iframe id="big-video" width="650" height="450" src="https://www.youtube.com/embed/46hMBNy1Pzo"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <div class="last-two-videos">
-                <div>
-                    <iframe width="450" height="200" src="https://www.youtube.com/embed/ngt9OM4gzkY"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                </div>
+            <div>
+                <iframe src="https://www.youtube.com/embed/46hMBNy1Pzo" title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+            <div>
+                <iframe src="https://www.youtube.com/embed/ngt9OM4gzkY" title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
 
-                <div>
-                    <iframe width="450" height="200" src="https://www.youtube.com/embed/Jw4rbsSevKs"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                </div>
-
-
+            <div>
+                <iframe src="https://www.youtube.com/embed/Jw4rbsSevKs" title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
             </div>
         </div>
     </section>
