--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <section class="banner">
             <div class="h1-button">
                 <h1>Conmebol Copa America 2021</h1>
-                <a href="" class="more-button">Watch Live <i class="fas fa-arrow-right"></i> </a>
+                <a href="https://www.youtube.com/watch?v=sDFr2Yzd-8s&ab_channel=SonyLIV" target="_blank"
+                    class="more-button">Watch Live
+                    <i class="fas fa-arrow-right"></i> </a>
             </div>
             <div>
                 <img src="images/banner.png" alt="Banner-A player kick the football">
@@ -160,10 +162,9 @@
                 <h2>Latest Videos</h2>
             </div>
             <div>
-                <a href="https://www.premierleague.com/clubs" class="more-button" target="_blank">More videos <i
-                        class="fas fa-arrow-right"></i> </a>
+                <a href="https://www.youtube.com/watch?v=sDFr2Yzd-8s&ab_channel=SonyLIV" class="more-button"
+                    target="_blank">More videos <i class="fas fa-arrow-right"></i> </a>
             </div>
-
         </div>
         <div class="videos">
             <div>
@@ -191,7 +192,8 @@
                 <h2>Club News</h2>
             </div>
             <div>
-                <a href="" class="more-button">More clubs <i class="fas fa-arrow-right"></i> </a>
+                <a href="https://www.premierleague.com/clubs" target="_blank" class="more-button">More clubs <i
+                        class="fas fa-arrow-right"></i> </a>
             </div>
         </div>
         <div class="clubs">
